fix index, add collapsabile lists for side bar

--- a/mysite/cookbook/static/cookbook/main.css
+++ b/mysite/cookbook/static/cookbook/main.css
@@ -16,6 +16,38 @@ ul {
   margin: 0;
 }
 
+.collapsible {
+  background-color: #fdfdfe;
+  color: #818182;
+  cursor: pointer;
+  padding: 7px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.collapsible:after {
+  content: '\002B';
+  color: #818182;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
+
+.collapsible-content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  background-color: #fafafa;
+}
+
 .bg-steel {
   background-color: #5f788a;
 }
